--- a/src/App.css
+++ b/src/App.css
@@ -54,9 +54,9 @@ a {
 
   background: linear-gradient(-45deg,#2c32dd, #4e53e0, var(--kepler-blue), #23D5AB);
   background-size: 400% 400%;
-  -webkit-animation: Gradient 10s ease infinite;
-  -moz-animation: Gradient 10s ease infinite;
-  animation: Gradient 10s ease infinite;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -93,6 +93,9 @@ a {
   transform: scaleX(1);
 }
 
+.signInLink:active {
+  color: var(--kepler-blue);
+}
 
 .logo {
   width: 150px;
@@ -105,9 +108,8 @@ a {
 
 /* gradient code inspired by https://codepen.io/JanickFischr/pen/BYvVqP */
 
-
 .gradient {
-  padding: 30vh 0;
+  padding: 20vh 0;
   text-align: center;
   min-height: 85vh;
   color: #fff;
@@ -156,7 +158,7 @@ a {
 /* Landing Page component styles end */
 
 
-/* SignIn component styles start */
+/* SignIn & CreateUser component styles start */
 
 .signInForm {
   display: flex;
@@ -164,9 +166,28 @@ a {
   align-items: center;
   padding: 2vh;
   margin: 0 auto;
-
 }
-/* SignIn component styles end */
+
+input {
+  border: 1px solid transparent;
+  padding: 5px 10px;
+  margin: 5px;
+  background: #fff;
+  transition: var(--transition-3s);
+}
+
+input:hover,
+input:focus,
+input:active {
+  border: 1px solid #000;
+}
+
+input[type="submit"]:hover,
+input[type="submit"]:focus {
+  background: var(--kepler-blue);
+  color: #fff;
+}
+/* SignIn & CreateUser component styles end */
 
 /* Footer component styles start */
 footer {
