--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,18 @@ img {
   width: 100%;
 }
 
+li {
+  list-style-type: none;
+}
+
 a {
   text-decoration: none;
   color: inherit;
+}
+
+button {
+  background: transparent;
+  border: none;
 }
 
 .wrapper {
@@ -48,6 +57,42 @@ a {
   color: #000;
 }
 
+/* loading animation, sourced:https://loading.io/css/ */
+.ldsRipple {
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+.ldsRipple div {
+  position: absolute;
+  border: 4px solid var(--kepler-blue);
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.ldsRipple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+
+@keyframes lds-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
+}
+
 /* Global styles end */
 
 /* Header component styles begin */
@@ -58,8 +103,8 @@ a {
 }
 
 .Header h1 {
-
   background: linear-gradient(-45deg,#2c32dd, #4e53e0, var(--kepler-blue), #23D5AB);
+  text-align: center;
   background-size: 400% 400%;
   -webkit-animation: Gradient 15s ease infinite;
   -moz-animation: Gradient 15s ease infinite;
@@ -70,6 +115,7 @@ a {
 
 .headerFlexContainer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
@@ -198,53 +244,55 @@ input[type="submit"]:focus {
 
 /* HomeLibrary component styles start */
 
+.recentlyDownloadedAside {
+  border: 1px solid lightgray;
+  margin: 5vh 2vh 0 0;
+  padding: 10px;
+  height: 300px;
+ position:fixed;
+}
+
+.recentlyDownloadedAside h2 {
+  font-size: 1rem;
+  margin-bottom: 2em;
+}
+
+.recentlyDownloadedAside ul {
+  display: flex;
+  flex-direction: column;
+}
+
+.recentlyDownloadedAside li {
+  text-align: center;
+}
+
+
+.libraryMain {
+  display: flex;
+  flex-direction: column;
+}
+table {
+  margin: 5vh auto;
+}
  
-li {
-  border-bottom: .5px solid lightgray;
-
-}
-
-
-
-.musicLibrary button {
-  background: transparent;
-  border: none;
-
-}
-
-
-.musicLibrary li {
+th {
   text-align: left;
 }
 
-.libraryHeader {
-  display: flex;
-  justify-content: space-between;
+th,
+td {
+  border-bottom: .5px solid lightgray;
+  padding: 1em 2em;
 }
 
+td:last-of-type {
+  text-align: center;
+}
+
+.fa-play-circle,
 .fa-arrow-circle-down {
   color: var(--kepler-blue);
   font-size: 1.6rem;
-}
-
-.songDetails {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  margin: 10px 0;
-  /* padding: 20px; */
- 
-}
-
-.songDetails h2,
-.songDetails h3 {
-  /* width: 40%; */
-  flex-basis: 2;
-}
-
-.songDetails button {
- flex-basis: 1;
 }
 
 
@@ -257,3 +305,56 @@ footer {
   padding-top: .5vh;
 }
 /* Footer component styles end */
+
+
+/* media queries start */
+
+
+/* Header media queries start */
+@media(max-width: 800px) {
+   .logo {
+    display: none;
+  }
+}
+/* Header media queries end */
+
+/* LandingPage media queries start */
+@media (max-width: 400px) {
+  .LandingPage h1 {
+    line-height: 1;
+    padding-bottom: 20px;
+  }
+}
+
+/* LandingPage media queries end */
+
+/* HomeLibrary media queries start */
+
+@media (max-width: 1230px) {
+  .recentlyDownloadedAside {
+     position: static;
+     height: auto;
+     margin: 0 auto;
+  }
+
+  .recentlyDownloadedAside h2 {
+    margin: 0;
+  }
+}
+
+@media (max-width: 540px) {
+  th, 
+  td {
+    padding: 1em;
+  }
+}
+
+@media (max-width: 430px){
+  th,
+  td {
+    padding: 0;
+  }
+}
+/* Home Library media queries end */
+
+/* media queries end */
