--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ html {
 
 :root {
   --kepler-blue: #161dbe;
+  --lightgray: lightgray;
   --transition-3s: all .3s ease-in-out;
 }
 
@@ -99,7 +100,7 @@ button {
 
 .Header {
   min-height: 10vh;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid var(--lightgray);
 }
 
 .Header h1 {
@@ -155,8 +156,6 @@ button {
 }
 /* Header component styles end */
 
-
-
 /* Landing Page component styles begin */
 
 /* gradient code inspired by https://codepen.io/JanickFischr/pen/BYvVqP */
@@ -210,7 +209,6 @@ button {
 }
 /* Landing Page component styles end */
 
-
 /* SignIn & CreateUser component styles start */
 
 .signInForm {
@@ -242,10 +240,10 @@ input[type="submit"]:focus {
 }
 /* SignIn & CreateUser component styles end */
 
-/* HomeLibrary component styles start */
+/* HomeLibrary and UsersLibrary component styles start */
 
 .recentlyDownloadedAside {
-  border: 1px solid lightgray;
+  border: 1px solid var(--lightgray);
   margin: 5vh 2vh 0 0;
   padding: 10px;
   height: 300px;
@@ -266,7 +264,6 @@ input[type="submit"]:focus {
   text-align: center;
 }
 
-
 .libraryMain {
   display: flex;
   flex-direction: column;
@@ -281,7 +278,7 @@ th {
 
 th,
 td {
-  border-bottom: .5px solid lightgray;
+  border-bottom: .5px solid var(--lightgray);
   padding: 1em 2em;
 }
 
@@ -295,7 +292,6 @@ td:last-of-type {
   font-size: 1.6rem;
 }
 
-
 /* HomeLibrary component styles end */
 
 /* Footer component styles start */
@@ -306,9 +302,7 @@ footer {
 }
 /* Footer component styles end */
 
-
-/* media queries start */
-
+/* Media queries start */
 
 /* Header media queries start */
 @media(max-width: 800px) {
@@ -355,6 +349,6 @@ footer {
     padding: 0;
   }
 }
-/* Home Library media queries end */
+/* HomeLibrary media queries end */
 
-/* media queries end */
+/* Media queries end */
